feat: added visibility change listener for mobile and updated JS file name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>I'm Stiven.</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="prefetch" href="/resume.pdf" as="document" crossorigin>
-    <script src="prefetch.js"></script>
+    <script src="scripts.js"></script>
 </head>
 <body>
     <h1>Hi. I'm Stiven</h1>
