feat: shortened body for symmetry

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p> I was previously a SWE intern at <a href="https://domu.ai">Domu</a> (YC S24), a coding fellow at <a href="https://makers.ngo">Makers</a>, and a technical student consultant at <a href="https://www.spaceappschallenge.org/">NASA Space Apps</a>.
     </p>
 
-    <p> I enjoy reading and hacking during my free time. I've won three hackathons, helped build <a href="https://gravitas.streamlit.app">this</a>, and dialed 300.000+ calls with an AI Agent for one of the biggest banks in Central America. 
+    <p> I've won three hackathons, dialed 300k+ calls with an AI Agent for one of the largest banks in Central America, and helped build <a href="https://gravitas.streamlit.app">this</a>.
     </p>
 
     <p>I am a runner, techno‑optimist, and effective altruist/accelerationist. Currently thinking about social prediction in Tokyo.  
