feat: set up for blog

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
     <p>I am a runner, techno‑optimist, and effective altruist/accelerationist. Currently thinking about social prediction in Tokyo.  
     </p>
-    
+
+    <h1 class="blog-header">Blog</h1>
+
+
+    <h1 class="social-header">Links</h1>
     <div class="social-links">
         <a href="https://github.com/SomeoneElseSt" target="_blank" rel="noopener">
             <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
