feat: adding a blog, part 1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </p>
 
     <h1 class="blog-header">Blog</h1>
-
+    <div id="blog-list"></div>
 
     <h1 class="social-header">Links</h1>
     <div class="social-links">
