--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>I'm Stiven.</title>
     <link rel="stylesheet" href="style.css?v=1.1"/>
     <link rel="prefetch" href="/resume.pdf" as="document" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
     <script src="scripts.js"></script>
 </head>
 <body>
