--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>I'm Stiven.</title>
-    <link rel="stylesheet" href="style.css?v=1.1"/>
+    <link rel="stylesheet" href="style.css?v=1.2"/>
     <link rel="prefetch" href="/resume.pdf" as="document" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="scripts.js?v=1.2"></script>
 </head>
 <body>
     <h1>Hi. I'm Stiven</h1>
