--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
     </p>
 
     <h1 class="blog-header">Blog</h1>
-    <div id="blog-list"></div>
+    <div id="blog-list">
+    <div class="blog-post-item">
+      <a href="/blog/post.html?id=hello-world" class="blog-post-link" data-title-length="11">
+        <span class="blog-post-title">Hello World</span>
+        <span class="blog-post-date">October 5, 2025</span>
+      </a>
+    </div>
+  </div>
 
     <h1 class="social-header">Links</h1>
     <div class="social-links">
