--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>I'm Stiven.</title>
-    <link rel="stylesheet" href="style.css?v=1.2"/>
-    <link rel="prefetch" href="/resume.pdf" as="document" crossorigin>
+    <style>
+        /* Critical CSS inlined */
+        body { background: black; color: white; font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; margin: 0; padding: 100px; }
+        h1 { font-size: 24px; margin-bottom: 24px; }
+        .blog-header { padding-top: 5px; }
+        .blog-post-item { border-bottom: 1px solid #333; padding: 16px 0; }
+        .blog-post-link { text-decoration: none; display: flex; justify-content: space-between; align-items: center; }
+        .blog-post-title { display: block; font-weight: normal; font-size: 16px; line-height: 1.6; color: white; }
+        .blog-post-date { font-size: 14px; opacity: 0.6; margin-left: 16px; color: white; }
+        .social-links { margin-top: 16px; display: flex; gap: 24px; min-height: 20px; align-items: center; }
+        p { margin: 16px 0; max-width: 600px; }
+        a { color: white; text-decoration: underline; text-underline-offset: 4px; }
+        .social-links a { text-decoration: none; display: inline-flex; align-items: center; }
+        .social-icon { width: 20px; height: 20px; opacity: 1; display: block; }
+        #nprogress .bar { background: white !important; height: 2px !important; }
+        #nprogress .peg { box-shadow: 0 0 10px white, 0 0 5px white; }
+        #nprogress .spinner { display: none !important; }
+    </style>
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap">
+    <link rel="preload" href="style.css?v=1.2" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="style.css?v=1.2"></noscript>
+    <link rel="preload" href="/resume.pdf" as="document" crossorigin>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
-    <script src="scripts.js?v=1.2"></script>
+    <script src="scripts.js?v=1.2" defer></script>
 </head>
 <body>
     <h1>Hi. I'm Stiven</h1>
@@ -29,11 +53,14 @@
     <h1 class="blog-header">Blog</h1>
     <div id="blog-list">
     <div class="blog-post-item">
-      <a href="/blog/post.html?id=hello-world" class="blog-post-link" data-title-length="11">
+      <a href="/blog/generated/hello-world.html" class="blog-post-link" data-title-length="11">
         <span class="blog-post-title">Hello World</span>
         <span class="blog-post-date">October 5, 2025</span>
       </a>
     </div>
+  </div>
+  </div>
+  </div>
   </div>
 
     <h1 class="social-header">Links</h1>
