--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         /* Critical CSS inlined */
         body { background: black; color: white; font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; margin: 0; padding: 100px; }
-        h1 { font-size: 24px; margin-bottom: 24px; }
-        .blog-header { padding-top: 5px; }
+        h1 { font-size: 24px; margin-top: 12; margin-bottom: 24px; font-weight: bold; }
+        .blog-header { padding-top: 25px; }
         .blog-post-item { border-bottom: 1px solid #333; padding: 16px 0; }
         .blog-post-link { text-decoration: none; display: flex; justify-content: space-between; align-items: center; }
         .blog-post-title { display: block; font-weight: normal; font-size: 16px; line-height: 1.6; color: white; }
@@ -27,8 +27,8 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" as="style">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=block" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=block">
     <link rel="preload" href="style.css?v=1.2" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="style.css?v=1.2"></noscript>
     <link rel="preload" href="/resume.pdf" as="document" crossorigin>
@@ -58,6 +58,34 @@
         <span class="blog-post-date">October 5, 2025</span>
       </a>
     </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
   </div>
   </div>
   </div>
