chore: one tiny CSS change

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
   </div>
   </div>
   </div>
+  </div>
+  </div>
+  </div>
 
     <h1 class="social-header">Links</h1>
     <div class="social-links">
