--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
   </div>
   </div>
   </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
 
     <h1 class="social-header">Links</h1>
     <div class="social-links">
