feat: modified build to make path url for each blog post

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 class="blog-header">Blog</h1>
     <div id="blog-list">
     <div class="blog-post-item">
-      <a href="/blog/generated/hello-world.html" class="blog-post-link" data-title-length="11">
+      <a href="/blog/hello-world/" class="blog-post-link" data-title-length="11">
         <span class="blog-post-title">Hello World</span>
         <span class="blog-post-date">October 5, 2025</span>
       </a>
