--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 }
         body { background: black; color: white; font-family: Inter, 'Inter Fallback', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; margin: 0; padding: 100px; }
         h1 { font-size: 24px; margin-top: 30px; margin-bottom: 24px; font-weight: bold; }
-        .blog-header { padding-top: 0px; }
-        .blog-post-item { border-bottom: 1px solid #333; padding: 2px 0; }
+        .blog-header { padding-top: 0px; margin-bottom: 10px;}
+        .blog-post-item { border-bottom: 1px solid #333; padding: 16px 0; }
         .blog-post-link { text-decoration: none; display: flex; justify-content: space-between; align-items: center; }
         .blog-post-title { display: block; font-weight: normal; font-size: 16px; line-height: 1.6; color: white; }
         .blog-post-date { font-size: 14px; opacity: 0.6; margin-left: 16px; color: white; }
@@ -155,7 +155,7 @@
         #nprogress .bar { background: white !important; height: 2px !important; }
         #nprogress .peg { box-shadow: 0 0 10px white, 0 0 5px white; }
         #nprogress .spinner { display: none !important; }
-        #blog-list { max-width: 600px; }
+        #blog-list { max-width: 600px; padding-top: 0px;}
     </style>
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v20/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZ9hiA.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v20/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuFuYAZ9hiA.woff2" as="font" type="font/woff2" crossorigin>
