chore: fixed mobile padding

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
         #nprogress .peg { box-shadow: 0 0 10px white, 0 0 5px white; }
         #nprogress .spinner { display: none !important; }
         #blog-list { max-width: 600px; padding-top: 0px;}
+        @media (max-width: 768px) {
+            body { padding: 24px; }
+        }
     </style>
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v20/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZ9hiA.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v20/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuFuYAZ9hiA.woff2" as="font" type="font/woff2" crossorigin>
