--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   descent-override: 22%;
   line-gap-override: 0%;
 }
-        body { background: black; color: white; font-family: Inter, 'Inter Fallback', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; margin: 0; padding: 100px; }
+        body { background: black; color: white; font-family: Inter, 'Inter Fallback', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; margin: 0; padding: 100px; padding-top: 80px;} /* Change padding top to modify the padding between the title and empty space above */
         h1 { font-size: 24px; margin-top: 30px; margin-bottom: 24px; font-weight: bold; }
         .blog-header { padding-top: 0px; margin-bottom: 8px;}
         .social-header { margin-bottom: 24px; }
