--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
         #blog-list { max-width: 600px; padding-top: 0px;}
         @media (max-width: 768px) {
             body { padding: 24px; }
+            .social-links { margin-bottom: 150px; } /* Change margin bottom to add/reduce whitespace between the links and the footer */
         }
     </style>
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v20/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZ9hiA.woff2" as="font" type="font/woff2" crossorigin>
