--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
     <h1 class="blog-header">Blog</h1>
     <div id="blog-list">
     <div class="blog-post-item">
+      <a href="/blog/cities/" class="blog-post-link" data-title-length="6">
+        <span class="blog-post-title">Cities</span>
+        <span class="blog-post-date">October 9, 2025</span>
+      </a>
+    </div>
+  
+    <div class="blog-post-item">
       <a href="/blog/hello-world/" class="blog-post-link" data-title-length="11">
         <span class="blog-post-title">Hello World</span>
         <span class="blog-post-date">October 5, 2025</span>
