feat: updated readme and padding

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         h1 { font-size: 24px; margin-top: 30px; margin-bottom: 24px; font-weight: bold; }
         .blog-header { padding-top: 0px; margin-bottom: 8px;}
         .social-header { margin-bottom: 24px; }
-        .blog-post-item { border-bottom: 1px solid #333; padding: 16px 0; }
+        .blog-post-item { border-bottom: 1px solid #333; padding: 15px 0; } /* Change padding to change the space between the blog posts title and the divider line */
         .blog-post-link { text-decoration: none; display: flex; justify-content: space-between; align-items: center; }
         .blog-post-title { display: block; font-weight: normal; font-size: 16px; line-height: 1.6; color: white; }
         .blog-post-date { font-size: 14px; opacity: 0.6; margin-left: 16px; color: white; }
