feat: updated scripts to typescript implementation

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css" />
     <link rel="preload" href="/resume.pdf" as="document" crossorigin>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
-    <script src="scripts.js?v=1.2" defer></script>
+    <script type="module" src="dist/init.js?v=1.2" defer></script>
 </head>
 <body>
     <h1>Hi. I'm Stiven</h1>
