--- a/index.html
+++ b/index.html
@@ -188,6 +188,13 @@
     <h1 class="blog-header">Blog</h1>
     <div id="blog-list">
     <div class="blog-post-item">
+      <a href="/blog/intelligence/" class="blog-post-link" data-title-length="12">
+        <span class="blog-post-title">Intelligence</span>
+        <span class="blog-post-date">November 14, 2025</span>
+      </a>
+    </div>
+  
+    <div class="blog-post-item">
       <a href="/blog/cancer/" class="blog-post-link" data-title-length="6">
         <span class="blog-post-title">Cancer</span>
         <span class="blog-post-date">November 3, 2025</span>
