--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
                 <line x1="16" y1="9" x2="8" y2="9"/>
             </svg>
         </a>
+        <a href="mailto:Strnmrtnz@icloud.com">
+            <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M3 3a2 2 0 0 0-2 2v.685l10.164 7.33a1 1 0 0 0 1.672 0L23 5.685V5a2 2 0 0 0-2-2H3Z"/>
+                <path d="M1 8.066V19a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V8.066l-9.447 6.811a3 3 0 0 1-3.106 0L1 8.066Z"/>
+            </svg>
+        </a>
     </div>
 </body>
 </html>
