chore: added back gravitas link after fixing deployment

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <p> I was previously a SWE intern at <a href="https://domu.ai">Domu</a> (YC S24), a coding fellow at <a href="https://makers.ngo">Makers</a>, and a technical student consultant for <a href="https://www.spaceappschallenge.org/">NASA Space Apps</a>.
     </p>
 
-    <p> I've won three hackathons, dialed 500k+ calls with an AI Agent for one of the largest banks in Central America, and built a UHI visualization platform.</p>
+    <p> I've won three hackathons, dialed 500k+ calls with an AI Agent for one of the largest banks in Central America, and built <a href="https://gravitas.streamlit.app">this</a> UHI vizualization platform.</p>
       
     <p>I am a runner, techno‑optimist, and effective altruist/accelerationist. Currently thinking about social prediction in Tokyo.  
     </p>
