chore: updated location

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <p> I've won four hackathons, dialed 500k+ calls with an AI Agent for one of the largest banks in Central America, and built <a href="https://gravitas.streamlit.app">this</a> UHI vizualization platform.</p>
       
-    <p>I am a runner, techno‑optimist, and effective altruist/accelerationist. Currently thinking about social prediction in Tokyo.  
+    <p>I am a runner, techno‑optimist, and effective altruist/accelerationist. Currently thinking about social prediction in Hyderabad.  
     </p>
 
     <h1 class="blog-header">Blog</h1>
