chore: adding lib support for latex rendering

--- a/index.html
+++ b/index.html
@@ -188,6 +188,13 @@
     <h1 class="blog-header">Blog</h1>
     <div id="blog-list">
     <div class="blog-post-item">
+      <a href="/blog/geometry-of-probability/" class="blog-post-link" data-title-length="23">
+        <span class="blog-post-title">Geometry of Probability</span>
+        <span class="blog-post-date">January 19, 2026</span>
+      </a>
+    </div>
+  
+    <div class="blog-post-item">
       <a href="/blog/intelligence/" class="blog-post-link" data-title-length="12">
         <span class="blog-post-title">Intelligence</span>
         <span class="blog-post-date">November 14, 2025</span>
