--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
     <h1 class="blog-header">Blog</h1>
     <div id="blog-list">
     <div class="blog-post-item">
-      <a href="/blog/geometry-of-probability/" class="blog-post-link" data-title-length="23">
-        <span class="blog-post-title">Geometry of Probability</span>
+      <a href="/blog/geometry/" class="blog-post-link" data-title-length="8">
+        <span class="blog-post-title">Geometry</span>
         <span class="blog-post-date">January 29, 2026</span>
       </a>
     </div>
