chore: added link to UHI infoarticle

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <p> I was previously a SWE intern at <a href="https://domu.ai">Domu</a> (YC S24), a coding fellow at <a href="https://makers.ngo">Makers</a>, and a technical student consultant for <a href="https://www.spaceappschallenge.org/">NASA Space Apps</a>.
     </p>
 
-    <p> I've won four hackathons, dialed 500k+ calls with an AI Agent for one of the largest banks in Central America, and built the first easy-to-use UHI vizualization platform.</p>
+    <p> I've won four hackathons, dialed 500k+ calls with an AI Agent for one of the largest banks in Central America, and built the first easy-to-use <a href="https://www.rff.org/publications/explainers/urban-heat-islands-101/"> UHI</a> vizualization platform.</p>
       
     <p>I am a runner, techno‑optimist, and effective altruist/accelerationist. Currently thinking about social prediction in Hyderabad.  
     </p>
